--- a/app/index.html
+++ b/app/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Small Setup</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <script src="jspm/system.js"></script>
+    <script src="jspm_packages/system.js"></script>
+    <script src="config/config.js"></script>
 </head>
 <body>
     <h1>Testing</h1>
-
+    <div id="container">Loading...</div>
     <script>
-        System.import("app.js");
+        System.import("app.jsx!");
     </script>
 </body>
 </html>
